# SKMC

./: CMakeLists.txt  C_mp-990448_primitive.car  a.xyz  a.xyz-3-3-1  a.xyz-3-4-1  a.xyz-3-4-2  a.xyz-3-4-3  a.xyz-3-4-4  a.xyz-3-4-5  a.xyz-3-4-6  a.xyz-3-4-7  a.xyz-3-4-8  a.xyz-3-4-9  b.xyz  boostmpi.cpp  box.hpp  box.s  boxtest.cpp  getframe.py  hsimple.root  kmc.hpp  kmc.s  main  main.cpp  match.hpp  my.lua  site.hpp  struct_template.hpp  sttest.cpp  template_example.dat.32bak  template_example.dat.bak
generate_temp/: C_mp-990448_primitive.car  getframe.py
generate_temp/source/: amarchair-kinks1.car  amarchair-kinks2.car  amarchair-kinks3.car  amarchair-kinks4.car  amarchair-s1.car  amarchair-s2.car  danjinlinxifus1.car  zigzag-kink-propagrators1.car  zigzag-kinks-pros2.car  zigzag-kinks2.car  zigzag-kinks3.car  zigzag-s1.car
include/: kmc.hpp  match.hpp  site.hpp  struct_template.hpp
src/: a.cpp  boosttest.cpp  box.cpp  mykmc.cpp  mykmc2.cpp
testgraphene/: a.xyz  box.hpp  boxtest.cpp  kmc.hpp  m.cpp  main.cpp  my.lua  mykmc.cpp  site.hpp  struct_template.hpp  sttest.cpp
