cmake_minimum_required(VERSION 3.0.0)
project(SKMC VERSION 0.1.0)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
include(CTest)
enable_testing()
set(headers include)
add_executable(SKMC src/mykmc2.cpp)
target_include_directories(SKMC PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>")
target_link_libraries(SKMC lua glog)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
